add speech to text 05.11

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="//vjs.zencdn.net/6.1.0/video-js.css" rel="stylesheet">
     <!-- <script src="http://vjs.zencdn.net/4.3/video.js"></script> -->
+    <script src="path/to/js/videojs-overlay-hyperlink.js"></script>
     <link href="videojs.markers.plugin.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/videojs-markers/0.7.0/videojs.markers.css" rel="stylesheet">
+    <link href="path/to/videojs-overlay-hyperlink.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
