--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div id="popup"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
